--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;网名：Mr.fortune</p>
       <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;联系方式：110</p>
       <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;爱好：躺平</p></td>
-    <td width="192"><img src="头像1.jpg" width="192" height="108" /></td>
+    <td width="192"><img src="http://img.xhsix.top/i/2022/09/26/qsik8d.jpg
+" width="192" height="108" /></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
@@ -68,7 +69,8 @@
     <td>&nbsp;</td>
   </tr>
   <tr>
-    <td><img src="头像1.jpg" width="200" height="108" /></td>
+    <td><img src="http://img.xhsix.top/i/2022/09/26/qsik8d.jpg
+" width="200" height="108" /></td>
     <td> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;诗万首，酒千觞。<br />
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;几曾著眼看侯王。<br />
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;玉楼金阙慵归去，<br />
