--- a/中国唱诗班/中国唱诗班.html
+++ b/中国唱诗班/中国唱诗班.html
@@ -54,7 +54,7 @@ background-position: -100% 0;
         向下探索↩</h3>
     </div></th>
     <th width="230" align="center" valign="middle"
-     bgcolor="#B3B294" ><img src="http://img.xhsix.top/i/2022/09/26/qsik8d.jpg
+     bgcolor="#B3B294" ><img src="http://p.ananas.chaoxing.com/star3/origin/c5cea4c693d22413206ef121b87308b1.png
 " width="211" height="120" /></th>
   </tr>
   </table>
