--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="referrer" content="no-referrer" /><!--页面头部添加-->
 <title>无标题文档</title>
 <style type="text/css">
 body {
