--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 <title>无标题文档</title>
 <style type="text/css">
 body {
-	background-color: #7C5347;
-}
-}
+	background-image: url(page1.jpg);
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-attachment: fixed;
+	background-size: cover;
+	}
 .标题1{
 	
 	}
