--- a/index.html
+++ b/index.html
@@ -12,6 +12,63 @@ body {
 	background-attachment: fixed;
 	background-size: cover;
 	}
+.container{
+    position: relative;
+    height: 600px;
+    width: 940px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 30px;
+}
+.container .card{
+    margin-top: 100px;
+    position: relative;
+    max-width: 300px;
+    height: 215px;
+    background:#B3B294 ;
+    margin: 30px 10px;
+    padding: 20px 15px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 5px 202px rgba(0,0,0,0.5);
+    transition: .3s ease-in-out;
+}
+.container .card:hover{
+    height: 420px;
+}
+.container .card .imgBx{
+    position: relative;
+    width: 260px;
+    height: 260px;
+    top: -60px;
+    left: 20px;
+    z-index: 1;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+}
+
+.container .card .imgBx img{
+    max-width: 100%;
+    border-radius: 4px;
+}
+
+.container .card .content{
+    position: relative;
+    margin-top: -140px;
+    padding: 10px 15px;
+    text-align: center;
+    color: #7C5347;
+    visibility: hidden;
+    opacity: 0;
+    transition: .3s ease-in-out;
+}
+.container .card:hover .content{
+    visibility: visible;
+    opacity: 1;
+    margin-top: -40px;
+    transition-delay: .3s;
+}
 .标题1{
 	
 	}
@@ -71,7 +128,41 @@ background-position: -100% 0;
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="中国唱诗班/中国唱诗班.html">中国唱诗班</a></td>
   </tr>
 </table>
-
-
+<table width="940px" border="0"  align="center">
+   <tr>
+     <td align="center" bgcolor="#FFFFFF"><div class="container">
+        <div class="card">
+            <div class="imgBx">
+                <img src="p1.png" alt="">
+            </div>
+            <div class="content">
+                <h2>Card One</h2>
+                <p>
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx">
+                <img src="p2.png" alt="">
+            </div>
+            <div class="content">
+                <h2>cad</h2>
+                <p></p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx">
+                <img src="p3.png" alt="">
+            </div>
+            <div class="content">
+                <h2>card</h2>
+                <p>
+                </p>
+            </div>
+        </div>
+        </div>
+     </td>
+   </tr>
+ </table>
 </body>
 </html>
