--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 .container{
     position: relative;
     height: 600px;
-    width: 940px;
+    width: 1040px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,7 +27,7 @@ body {
     position: relative;
     max-width: 300px;
     height: 215px;
-    background:#B3B294 ;
+    background: #fff;
     margin: 30px 10px;
     padding: 20px 15px;
     display: flex;
@@ -58,25 +58,23 @@ body {
     margin-top: -140px;
     padding: 10px 15px;
     text-align: center;
-    color: #7C5347;
+    color: #4b920898;
     visibility: hidden;
     opacity: 0;
     transition: .3s ease-in-out;
 }
 .container .card:hover .content{
-    visibility: visible;
-    opacity: 1;
-    margin-top: -40px;
-    transition-delay: .3s;
-}
+	visibility: visible;
+	opacity: 1;
+	margin-top: -40px;
+	transition-delay: .3s;
+	font-size: 10px;
+    font-family:"微软雅黑";}
+
 .标题1{
 	
 	}
-.内容简介 {
-	font-family: "宋体";
-	font-size: 24px;
-	color: #C50515;
-}
+
 .标题1 .标题1 {
 	color: #CCF;
 	font-family: "微软雅黑";
@@ -123,6 +121,7 @@ background-position: -100% 0;
   <tr class="标题1">
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="index.html">首页</a></td>
     <td align="center" bgcolor="#FFFFFF" class="标题1">家乡风情</td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="jiaocheng/jiaocheng.html">教程</a></td>
     <td align="center" bgcolor="#FFFFFF" class="标题1">多媒体技术</td>
     <td align="center" bgcolor="#FFFFFF" class="标题1">留言</td>
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="中国唱诗班/中国唱诗班.html">中国唱诗班</a></td>
@@ -136,27 +135,35 @@ background-position: -100% 0;
                 <img src="p1.png" alt="">
             </div>
             <div class="content">
-                <h2>Card One</h2>
-                <p>
-                </p>
+                <h2>IRON MAN</h2>
+                <p>《钢铁侠》（Iron Man）是由美国漫威电影工作室 </p>
+                <p>出品的一部科幻冒险电影。该作也是“漫威电影</p>
+                <p>宇宙”系列的首部电影。该片于2008年5月2日</p>
+                <p>在美国上映，2008年4月30日在中国大陆上映。</p>
+                <p>影片讲述了托尼·史塔克在遇难后改进了</p>
+                <p>盔甲的功能，化身“钢铁侠”，以一个义务警察的身份保护了
+                <p>这个世界和平的故事。 </p>
             </div>
         </div>
         <div class="card">
             <div class="imgBx">
                 <img src="p2.png" alt="">
             </div>
-            <div class="content">
-                <h2>cad</h2>
-                <p></p>
-            </div>
+        <div class="content">
+            <h2>关于我</h2>
+            <p>就读于皇家大理工</p>
+            <p>爱好：躺平，发呆，睡觉</p>
+            <p>星座：处女座，</p>
+            <p>other：组网技术实训demo</p>
+          </div>
         </div>
         <div class="card">
             <div class="imgBx">
                 <img src="p3.png" alt="">
             </div>
             <div class="content">
-                <h2>card</h2>
-                <p>
+                <h2>ClashRoyale</h2>
+                <p>Clash Royale is a real-time multiplayer game starring the Royales, your favourite Clash characters and much, much more. Collect and upgrade dozens of cards featuring the Clash of Clans troops, spells and defenses you know and love, as well as the Royales: Princes, Knights, Baby Dragons and more. Knock the enemy King and Princesses from their towers to defeat your opponents and win Trophies, Crowns and glory in the Arena.
                 </p>
             </div>
         </div>
