--- a/中国唱诗班/中国唱诗班.html
+++ b/中国唱诗班/中国唱诗班.html
@@ -62,6 +62,7 @@ background-position: -100% 0;
   <tr class="标题1">
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../index.html">首页</a></td>
     <td align="center" bgcolor="#FFFFFF" class="标题1">家乡风情</td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../jiaocheng/jiaocheng.html">教程</a></td>
     <td align="center" bgcolor="#FFFFFF" class="标题1">多媒体技术</td>
     <td align="center" bgcolor="#FFFFFF" class="标题1">留言</td>
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="中国唱诗班.html">中国唱诗班</a></td>
