--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ body {
     color: #4b920898;
     visibility: hidden;
     opacity: 0;
+	font-family:"微软雅黑";
     transition: .3s ease-in-out;
 }
 .container .card:hover .content{
@@ -68,7 +69,7 @@ body {
 	opacity: 1;
 	margin-top: -40px;
 	transition-delay: .3s;
-	font-size: 10px;
+	font-size: 9px;
     font-family:"微软雅黑";}
 
 .标题1{
@@ -107,12 +108,12 @@ background-position: -100% 0;
 <table width="1000" border="1" align="center">
   <tr>
     <th colspan="3" align="center" valign="middle" bgcolor="#FFFFFF" ><img src="wuli logo.jpg" width="150" height="149"><br></th>
-    <th width="593" align="center" valign="middle" bgcolor="#FFFFFF" ><div>
-      <h3>🌴🦄赖晓龙的个人网站🐉🍃<br>
+    <th width="602" align="center" valign="middle"  background="head.png"><div>
+      <h3>🌴🦄赖晓龙的个人网站🐉🍃<br />
         <br />
         向下探索↩</h3>
     </div></th>
-    <th width="230" align="center" valign="middle"
+    <th width="232" align="center" valign="middle"
      bgcolor="#B3B294" ><img alt="drawing of a cat" src="http://p.ananas.chaoxing.com/star3/origin/c5cea4c693d22413206ef121b87308b1.png
 " width="211" height="120" /></th>
   </tr>
@@ -141,8 +142,8 @@ background-position: -100% 0;
                 <p>宇宙”系列的首部电影。该片于2008年5月2日</p>
                 <p>在美国上映，2008年4月30日在中国大陆上映。</p>
                 <p>影片讲述了托尼·史塔克在遇难后改进了</p>
-                <p>盔甲的功能，化身“钢铁侠”，以一个义务警察的身份保护了
-                <p>这个世界和平的故事。 </p>
+                <p>盔甲的功能，化身“钢铁侠”，以一个义务警察的</p>
+                <p>身份保护了这个世界和平的故事。 </p>
             </div>
         </div>
         <div class="card">
