--- a/中国唱诗班/中国唱诗班.html
+++ b/中国唱诗班/中国唱诗班.html
@@ -48,7 +48,7 @@ background-position: -100% 0;
 <table width="1000" border="1" align="center">
   <tr>
     <th colspan="3" align="center" valign="middle" bgcolor="#FFFFFF" ><img src="../wuli logo.jpg" width="150" height="149"><br></th>
-    <th width="593" align="center" valign="middle" bgcolor="#FFFFFF" ><div>
+    <th width="607" align="center" valign="middle" background="../head.png" ><div>
       <h3>🌴🦄赖晓龙的个人网站🐉🍃<br>
         <br>
         向下探索↩</h3>
