update all html

--- a/jiaxiang/jiaxiangshanshui.html
+++ b/jiaxiang/jiaxiangshanshui.html
@@ -4,300 +4,71 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
 <style type="text/css">
-a1 {
-	font-size: 36px;
-	color: #09F;
-}
-a1 {
-	font-size: 36px;
-	color: #09F;
-}
-.a1 {
-	font-size: 28px;
-	color: #09F;
-}
-.a2 {
-	font-size: 24px;
-	color: #CCF;
-}
-.a3 {
-	font-size: 18px;
-	color: #F93;
-}
-.a4 {
-	font-size: 24px;
-	color: #FCF;
-}
-.a4 {
-	font-size: 18px;
-	color: #FC3;
-}
-.a5 {
-	font-size: 18px;
-	color: #FCF;
-}
-.a6 {
-	font-size: 18px;
-	color: #F9C;
-}
-.Y1 {
-	font-size: 18px;
-	color: #03F;
-}
 body {
-	background-image: url(1.%E9%A6%96%E9%A1%B5/images/bgfill.jpg);
-	background-color: #A9DBF6;
+	background-color: #66CCFF;
 }
-.l1-lanse {
-	font-size: 16px;
-	color: #36F;
 }
-.y2-1 {
-	font-size: 22px;
-	color: #135633;
+.标题1{
+	
+	}
+.内容简介 {
+	font-family: "宋体";
+	font-size: 24px;
+	color: #C50515;
 }
-.y2-1 {
-	font-weight: bold;
+.标题1 .标题1 {
+	color: #CCF;
+	font-family: "微软雅黑";
+	font-size: 30px;
 }
-#apDiv1 {
-	position:absolute;
-	width:500px;
-	height:300px;
-	z-index:1;
-	left: 820px;
-	top: 400px;
-	visibility: hidden;
+div h3 {
+	text-align: center;
+	font-size: 24px;
+	background: -webkit-linear-gradient(left, #147B96, #E6D205 25%, #147B96 50%, #E6D205 75%, #147B96);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	-webkit-background-size: 200% 100%;
+	-webkit-animation: runs 3s infinite linear;
+	color: #000000;
+	font-family: "微软雅黑";
 }
-#apDiv2 {
-	position:absolute;
-	width:500px;
-	height:300px;
-	z-index:2;
-	left: 820px;
-	top: 400px;
-	visibility: hidden;
+@-webkit-keyframes runs {
+0% {
+background-position: 0 0;
 }
-#apDiv3 {
-	position:absolute;
-	width:500px;
-	height:300px;
-	z-index:3;
-	left: 820px;
-	top: 400px;
-	visibility: hidden;
+100% {
+background-position: -100% 0;
 }
-#apDiv7 {
-	position:absolute;
-	width:200px;
-	height:115px;
-	z-index:4;
 }
-#apDiv4 {
-	position:absolute;
-	width:500px;
-	height:300px;
-	z-index:4;
-	left: 820px;
-	top: 400px;
-	visibility: hidden;
-}
-#apDiv5 {
-	position:absolute;
-	width:500px;
-	height:300px;
-	z-index:5;
-	left: 820px;
-	top: 400px;
-	visibility: hidden;
-}
-#apDiv6 {
-	position:absolute;
-	width:691px;
-	height:94px;
-	z-index:6;
-	left: 728px;
-	top: 730px;
-}
-#apDiv6 {
-	position:absolute;
-	width:500px;
-	height:300px;
-	z-index:6;
-	left: 820px;
-	top: 400px;
-	visibility: hidden;
-}
-#apDiv8 {
-	position:absolute;
-	width:454px;
-	height:115px;
-	z-index:7;
-	left: 832px;
-	top: 792px;
-	visibility: visible;
-}
-#apDiv7 {
-	position:absolute;
-	width:500px;
-	height:300px;
-	z-index:7;
-	left: 1368px;
-	top: 708px;
-	visibility: visible;
-}
-#apDiv9 {
-	position:absolute;
-	width:200px;
-	height:115px;
-	z-index:8;
-}
-#apDiv10 {
-	position:absolute;
-	width:493px;
-	height:135px;
-	z-index:1;
-	left: 10px;
-	top: 308px;
-}
-#apDiv11 {
-	position:absolute;
-	width:200px;
-	height:115px;
-	z-index:7;
-}
-#apDiv12 {
-	position:absolute;
-	width:500px;
-	height:140px;
-	z-index:1;
-	left: 5px;
-	top: 320px;
-	visibility: hidden;
-}
-#apDiv13 {
-	position:absolute;
-	width:500px;
-	height:140px;
-	z-index:1;
-	left: 5px;
-	top: 300px;
-	visibility: hidden;
-}
-#apDiv14 {
-	position:absolute;
-	width:500px;
-	height:140px;
-	z-index:1;
-	left: 5px;
-	top: 300px;
-	visibility: hidden;
-}
-#apDiv15 {
-	position:absolute;
-	width:500px;
-	height:140px;
-	z-index:1;
-	left: 5px;
-	top: 300px;
-	visibility: hidden;
-}
-#apDiv16 {
-	position:absolute;
-	width:500px;
-	height:140px;
-	z-index:1;
-	left: 5px;
-	top: 300px;
-	visibility: hidden;
-}
-#apDiv17 {
-	position:absolute;
-	width:500px;
-	height:140px;
-	z-index:1;
-	left: 5px;
-	top: 300px;
-	font-size: 14px;
-	visibility: hidden;
-}
-#apDiv18 {
-	position:absolute;
-	width:200px;
-	height:115px;
-	z-index:7;
-	left: 982px;
-	top: 583px;
-}
-#apDiv19 {
-	position:absolute;
-	width:500px;
-	height:140px;
-	z-index:7;
-	left: 811px;
-	top: 800px;
-	visibility: hidden;
-}
-.z1 {
-	font-size: 18px;
-	color: #C00;
-}
-</style></head>
 
-<body>
-<div align="center">
-  <p class="a1">&nbsp;</p>
-  <table width="1003" border="0" cellspacing="0" cellpadding="0">
-    <tr>
-      <td width="1003"><a href="1.首页/images/title.jpg"><img src="../1.首页/images/title.jpg" width="1003" height="200" /></a></td>
-    </tr>
-    <tr bgcolor="#BBEDF8">
-      <td height="33" bgcolor="#BFEAF4"><div align="left" class="y2-1">          <a href="../1.shouye.html"><strong>首页</strong></a> <strong>          <a href="../2.专业教程/study/2.zhuanyejiaocheng.html">专业教程</a>          <a href="../3.作品展示/3.zuopinzhanshi.html">作品展示</a>          <a href="jiaxiangshanshui.html">家乡山水 </a>         <a href="../5.访客信息/fangkexinxi.html">访客信息</a>           <a href="../6.心情日记/zong.html" target="_new">心情日记</a></strong></div></td>
-    </tr>
-  </table>
-  <table width="1003" border="1">
-    <tr>
-      <td width="475" rowspan="3" bgcolor="#FCF8F9"><img src="travel/tlimages/map.jpg" width="363" height="453" border="0" align="middle" usemap="#Map" /></td>
-      <td width="509" height="68" align="center" bgcolor="#FFFFCC" class="y2-1">野山坡风景名胜区
-        <div id="apDiv1"><img src="travel/tlimages/bcp.jpg" width="500" height="300" />
-          <div id="apDiv12">野三坡白草畔素有&ldquo;太行山中的绿色明珠&rdquo;之称，主峰海拔1983米，与北京百花山是&ldquo;姊妹峰&rdquo;。堪称&ldquo;天然的植物王国&rdquo;、&ldquo;野生动物乐园&rdquo;，不仅具有较高的观赏价值，而且还极具科学考察价值。</div>
-      </div></td>
-    </tr>
-    <tr>
-      <td height="254" bgcolor="#FFFFCC"><div id="apDiv2"><img src="travel/tlimages/blx.jpg" width="500" height="300" />
-        <div id="apDiv13">野三坡风景区内，有一条回旋曲折的拒马河蜿蜒流淌，河水清澈见底，长流不息。沿岸群山竞秀，环境清幽。顺流而行，&ldquo;石猴戏水&rdquo;、&ldquo;石门顿开&rdquo;、&ldquo;悬崖栈道&rdquo;、&ldquo;天桥拱立&rdquo;、&ldquo;沙蟒拦路&rdquo;等景点接踵而至。</div>
-      </div>
-      <div id="apDiv3"><img src="travel/tlimages/jhsh.jpg" width="499" height="300" />
-        <div id="apDiv14">金华山自然风景区野趣横生。葱茏黛绿的万亩林海，壮丽多姿的拉拉湖瀑布，&ldquo;闪闪发光&rdquo;的金华山顶，别具一格的&ldquo;老人官&rdquo;故居等各具特色的景点。</div>
-      </div>
-      <div id="apDiv4"><img src="travel/tlimages/jmh.jpg" width="501" height="300" />
-        <div id="apDiv15">野三坡风景区内，有一条回旋曲折的拒马河蜿蜒流淌，河水清澈见底，长流不息。沿岸群山竞秀，环境清幽。顺流而行，&ldquo;石猴戏水&rdquo;、&ldquo;石门顿开&rdquo;、&ldquo;悬崖栈道&rdquo;、&ldquo;天桥拱立&rdquo;、&ldquo;沙蟒拦路&rdquo;等景点接踵而至。</div>
-      </div>
-      <div id="apDiv5"><img src="travel/tlimages/ysp.jpg" width="501" height="300" />
-        <div id="apDiv16">拒马河支流小西河流域分布着许多奇泉怪洞，是游人猎奇揽胜之佳境，这就是鱼谷洞景点。这里的鱼谷洞和鱼谷洞泉自然天成，充满神奇。</div>
-      </div>
-      <div id="apDiv19">野三坡白草畔素有&ldquo;太行山中的绿色明珠&rdquo;之称，主峰海拔1983米，与北京百花山是&ldquo;姊妹峰&rdquo;。堪称&ldquo;天然的植物王国&rdquo;、&ldquo;野生动物乐园&rdquo;，不仅具有较高的观赏价值，而且还极具科学考察价值。</div>
-      <img src="travel/tlimages/ysp.jpg" width="514" height="300" /></td>
-    </tr>
-    <tr>
-      <td height="150" bgcolor="#FFFFCC">野三坡白草畔素有&ldquo;太行山中的绿色明珠&rdquo;之称，主峰海拔1983米，与北京百花山是&ldquo;姊妹峰&rdquo;。堪称&ldquo;天然的植物王国&rdquo;、&ldquo;野生动物乐园&rdquo;，不仅具有较高的观赏价值，而且还极具科学考察价值。</td>
-    </tr>
-    <tr>
-      <td colspan="2" align="center" class="z1">版权所有：悠悠我心    <a href="mailto:youyouwoxin@163.com">欢迎来信 </a>  QQ:123456789</td>
-    </tr>
-  </table>
-  <div id="apDiv6"><img src="travel/tlimages/ygd.jpg" width="503" height="300" />
-    <div id="apDiv17">龙门天关长城文物保护区内山峰挺拔，断崖绝壁高耸入云，山谷中清泉溪流激浪奔腾，景色尤为壮观。自古以来，这里是京都通往塞外的交通要道和兵家必争之地。</div>
-  </div>
-<p>&nbsp;</p>
-</div>
+</style>
+</head><body class="内容简介">
 
-<map name="Map" id="Map">
-  <area shape="poly" coords="108,167,100,183,88,199,82,209,80,227,90,240,111,252,119,265,146,275,180,279,213,277,238,281,254,282,254,269,254,243,210,232,186,220,188,212,195,199,171,185,141,177,110,166" href="travel/jxssjianjie.html#jd4" target="_new" />
-  <area shape="poly" coords="133,87,115,87,113,98,119,109,111,120,104,134,102,149,107,165,119,168,131,174,145,179,163,183,169,183,168,170,179,159,188,150,203,139,188,124,176,107,155,91,138,85" href="travel/jxssjianjie.html#jd2" target="_new" />
-  <area shape="poly" coords="120,266,111,285,93,295,79,306,66,313,60,324,75,336,88,342,88,359,110,373,131,397,143,413,161,427,187,421,211,419,230,417,242,413,227,389,220,381,205,367,199,356,197,335,192,316,182,299,174,287,178,280,149,273,125,268" href="travel/jxssjianjie.html#jd5" target="_new" />
-  <area shape="poly" coords="196,197,214,201,234,187,240,183,260,193,271,189,294,184,309,173,320,160,302,152,290,147,278,140,269,133,263,131,240,133,217,134,204,135,186,153,178,160,169,169,172,187,192,194" href="travel/jxssjianjie.html#jd3" target="_new" />
-  <area shape="poly" coords="254,285,257,296,266,302,267,311,259,319,256,330,266,334,272,340,275,347,289,347,292,358,293,369,292,380,284,389,271,394,259,397,252,398,241,410,230,391,219,380,204,367,199,356,196,340,194,323,189,312,186,300,176,289,177,281,189,279,206,278,230,280,253,284" href="travel/jxssjianjie.html#jd6" target="_new" />
-  <area shape="poly" coords="178,8,200,14,211,20,223,24,237,39,249,47,263,57,268,68,264,80,263,85,270,93,273,106,271,117,267,126,256,130,234,129,220,131,208,132,194,126,186,114,169,108,157,100,148,81,146,66,171,6" href="travel/jxssjianjie.html#jd1" target="_new" />
-</map>
+
+<table width="1000" border="1" align="center">
+  <tr>
+    <th colspan="3" align="center" valign="middle" bgcolor="#FFFFFF" ><img src="../wuli logo.jpg" width="150" height="149"><br></th>
+    <th width="623" align="center" valign="middle" background="../head.png" ><div>
+      <h3><a href="https://gitee.com/whutoffortune/html">🌴🦄赖晓龙的个人网站🐉🍃<br>
+        <br>
+        向下探索↩</h3>
+    </div></th>
+    <th width="230" align="center" valign="middle"
+     bgcolor="#B3B294" ><img src="http://p.ananas.chaoxing.com/star3/origin/c5cea4c693d22413206ef121b87308b1.png
+" width="211" height="120" /></th>
+  </tr>
+  </table>
+ <table width="1000" border="1" align="center">
+  <tr class="标题1">
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../index.html">首页</a></td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../jiaxiang/jiaxiangshanshui.html">家乡</a></td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../jiaocheng/jiaocheng.html">使用教程</a></td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../duomeiti/duomeiti.html">多媒体技术</a></td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../zhuihuqinlong/gutianle.html">追虎擒龙</a></td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../liuyan/liuyan.html">留言</a></td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../中国唱诗班/中国唱诗班.html">中国唱诗班</a></td>
+  </tr>
+</table>
+
 </body>
 </html>
