--- a/index.html
+++ b/index.html
@@ -104,27 +104,27 @@ background-position: -100% 0;
 </style>
 </head><body class="内容简介">
 
-
 <table width="1000" border="1" align="center">
   <tr>
     <th colspan="3" align="center" valign="middle" bgcolor="#FFFFFF" ><img src="wuli logo.jpg" width="150" height="149"><br></th>
-    <th width="602" align="center" valign="middle"  background="head.png"><div>
-      <h3>🌴🦄赖晓龙的个人网站🐉🍃<br />
-        <br />
+    <th width="623" align="center" valign="middle" background="head.png" ><div>
+      <h3><a href="https://gitee.com/whutoffortune/html">🌴🦄赖晓龙的个人网站🐉🍃<br>
+        <br>
         向下探索↩</h3>
     </div></th>
-    <th width="232" align="center" valign="middle"
-     bgcolor="#B3B294" ><img alt="drawing of a cat" src="http://p.ananas.chaoxing.com/star3/origin/c5cea4c693d22413206ef121b87308b1.png
+    <th width="230" align="center" valign="middle"
+     bgcolor="#B3B294" ><img src="http://p.ananas.chaoxing.com/star3/origin/c5cea4c693d22413206ef121b87308b1.png
 " width="211" height="120" /></th>
   </tr>
   </table>
  <table width="1000" border="1" align="center">
   <tr class="标题1">
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="index.html">首页</a></td>
-    <td align="center" bgcolor="#FFFFFF" class="标题1">家乡风情</td>
-    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="jiaocheng/jiaocheng.html">教程</a></td>
-    <td align="center" bgcolor="#FFFFFF" class="标题1">多媒体技术</td>
-    <td align="center" bgcolor="#FFFFFF" class="标题1">留言</td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="jiaxiang/jiaxiangshanshui.html">家乡</a></td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="jiaocheng/jiaocheng.html">使用教程</a></td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="duomeiti/duomeiti.html">多媒体技术</a></td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="zhuihuqinlong/gutianle.html">追虎擒龙</a></td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="liuyan/liuyan.html">留言</a></td>
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="中国唱诗班/中国唱诗班.html">中国唱诗班</a></td>
   </tr>
 </table>
