--- a/jiaocheng/jiaocheng.html
+++ b/jiaocheng/jiaocheng.html
@@ -49,7 +49,7 @@ background-position: -100% 0;
   <tr>
     <th colspan="3" align="center" valign="middle" bgcolor="#FFFFFF" ><img src="../wuli logo.jpg" width="150" height="149"><br></th>
     <th width="623" align="center" valign="middle" background="../head.png" ><div>
-      <h3>🌴🦄赖晓龙的个人网站🐉🍃<br>
+      <h3><a href="https://gitee.com/whutoffortune/html">🌴🦄赖晓龙的个人网站🐉🍃<br>
         <br>
         向下探索↩</h3>
     </div></th>
@@ -61,10 +61,11 @@ background-position: -100% 0;
  <table width="1000" border="1" align="center">
   <tr class="标题1">
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../index.html">首页</a></td>
-    <td align="center" bgcolor="#FFFFFF" class="标题1">家乡风情</td>
-    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="jiaocheng.html">教程</a></td>
-    <td align="center" bgcolor="#FFFFFF" class="标题1">多媒体技术</td>
-    <td align="center" bgcolor="#FFFFFF" class="标题1">留言</td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../jiaxiang/jiaxiangshanshui.html">家乡</a></td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="jiaocheng.html">使用教程</a></td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../duomeiti/duomeiti.html">多媒体技术</a></td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../zhuihuqinlong/gutianle.html">追虎擒龙</a></td>
+    <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../liuyan/liuyan.html">留言</a></td>
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../中国唱诗班/中国唱诗班.html">中国唱诗班</a></td>
   </tr>
 </table>
