update jiaocehng html

--- a/jiaocheng/jiaocheng.html
+++ b/jiaocheng/jiaocheng.html
@@ -5,16 +5,16 @@
 <title>无标题文档</title>
 <style type="text/css">
 body {
-	background-color: #66CCFF;
-}
+	background-image: linear-gradient(135deg, #79d8cc 0%, #7211d3 100%); 
 }
 .标题1{
 	
 	}
 .内容简介 {
-	font-family: "宋体";
+	font-family: "微软雅黑";
 	font-size: 24px;
-	color: #C50515;
+	color: #00FF00;
+	text-align: center;
 }
 .标题1 .标题1 {
 	color: #CCF;
@@ -41,6 +41,12 @@ background-position: -100% 0;
 }
 }
 
+.内容简介 table tr td p .内容简介 a {
+	color: #33CC00;
+}
+.内容简介 table tr td .内容简介 a {
+	color: #33CC00;
+}
 </style>
 </head><body class="内容简介">
 
@@ -57,8 +63,8 @@ background-position: -100% 0;
      bgcolor="#B3B294" ><img src="http://p.ananas.chaoxing.com/star3/origin/c5cea4c693d22413206ef121b87308b1.png
 " width="211" height="120" /></th>
   </tr>
-  </table>
- <table width="1000" border="1" align="center">
+</table>
+<table width="1000" border="1" align="center">
   <tr class="标题1">
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../index.html">首页</a></td>
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../jiaxiang/jiaxiangshanshui.html">家乡</a></td>
@@ -69,6 +75,51 @@ background-position: -100% 0;
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../中国唱诗班/中国唱诗班.html">中国唱诗班</a></td>
   </tr>
 </table>
+ <table width="1004" border="0" align="center">
+   <tr>
+     <td bgcolor="#FFFFFF"><hr noshade="noshade" /></td>
+   </tr>
+   <tr>
+     <td align="center" bgcolor="#FFFFFF"><p><span class="内容简介"><a href="https://zhuanlan.zhihu.com/p/111333067">使用学习通网盘当作图床 - 知乎</a></span></p></td>
+   </tr>
+   <tr>
+     <td align="center" bgcolor="#FFFFFF"><p><span class="内容简介"><a href="https://juejin.cn/post/7135335154716770341">github问题：master和main分支合并 - 掘金<br />
+     </a></span></p></td>
+   </tr>
+   <tr>
+     <td align="center" bgcolor="#FFFFFF"><p><span class="内容简介"><a href="https://jishuin.proginn.com/p/763bfbd6e0fd">3种CSS实现背景图片全屏铺满自适应的方式-技术圈<br />
+     </a></span></p></td>
+   </tr>
+   <tr>
+     <td align="center" bgcolor="#FFFFFF"><span class="内容简介"><a href="https://www.bilibili.com/video/BV1g5411m7vt/?spm_id_from=333.1007.top_right_bar_window_history.content.click&amp;vd_source=65ded5549a01c02a6dd5e658bcd0c06e">【DW网页设计制作】超简单的网页制作教程——制作首页-第一期_哔哩哔哩_bilibili<br />
+     </a></span></td>
+   </tr>
+   <tr>
+     <td align="center" bgcolor="#FFFFFF"><p><span class="内容简介"><a href="https://www.bilibili.com/video/BV1m24y1Z711/?spm_id_from=333.1007.top_right_bar_window_history.content.click&amp;vd_source=65ded5549a01c02a6dd5e658bcd0c06e">[CSS]这该死的高级感 - 旋转音乐播放器_哔哩哔哩_bilibili</a></span></p></td>
+   </tr>
+   <tr>
+     <td align="center" bgcolor="#FFFFFF"><p><span class="内容简介"><a href="https://www.bilibili.com/video/BV1RK41157yh/?spm_id_from=333.337.search-card.all.click&amp;vd_source=fab16f36f321a0665267dc4deb70676c">CSS 图片响应悬停效果_哔哩哔哩_bilibili</a></span></p></td>
+   </tr>
+   <tr>
+     <td align="center" bgcolor="#FFFFFF"><p><span class="内容简介"><a href="https://www.liaoxuefeng.com/wiki/896043488029600">Git教程 - 廖雪峰的官方网站<br />
+     </a></span></p></td>
+   </tr>
+   <tr>
+     <td align="center" bgcolor="#FFFFFF"><span class="内容简介"><a href="https://sspai.com/post/54608">GitHub Pages 搭建教程</a></span></td>
+   </tr>
+   <tr>
+     <td align="center" bgcolor="#FFFFFF"><p><span class="内容简介"><a href="https://www.jianshu.com/p/b76daccd09f0">&ldquo;Please make sure you have the correct access<br />
+rights and the  repository exists.&rdquo; - 简书<br />
+     </a></span></p></td>
+   </tr>
+   <tr>
+     <td align="center" bgcolor="#FFFFFF"><p><span class="内容简介"><a href="https://zhuanlan.zhihu.com/p/183977963">如何拥有多个GitHub Pages - 知乎<br />
+     </a></span></p></td>
+   </tr>
+   <tr>
+     <td bgcolor="#FFFFFF"><hr noshade="noshade" /></td>
+   </tr>
+ </table>
 
 </body>
 </html>
