update liuyan html

--- a/jiaxiang/jiaxiangshanshui.html
+++ b/jiaxiang/jiaxiangshanshui.html
@@ -2,12 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>赖晓龙的组网技术实训-家乡</title>
 <style type="text/css">
 body {
-	background-color: #66CCFF;
-}
-}
+     background-image: linear-gradient(135deg, #79d8cc 0%, #7211d3 100%);
+} 
 .标题1{
 	
 	}
@@ -41,10 +40,22 @@ background-position: -100% 0;
 }
 }
 
+.内容简介 table tr td {
+	font-size: 80px;
+	font-family: "微软雅黑";
+	color: #CCF;
+}
+.jiaxiang {
+	font-size: 80px;
+	font-family: "微软雅黑";
+	color: #C9F;
+}
+.jianjie {
+	font-size: 24px;
+	color: #0CF;
+}
 </style>
-</head><body class="内容简介">
-
-
+</head><body >
 <table width="1000" border="1" align="center">
   <tr>
     <th colspan="3" align="center" valign="middle" bgcolor="#FFFFFF" ><img src="../wuli logo.jpg" width="150" height="149"><br></th>
@@ -69,6 +80,32 @@ background-position: -100% 0;
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../中国唱诗班/中国唱诗班.html">中国唱诗班</a></td>
   </tr>
 </table>
-
+ <table width="1004" border="0" align="center">
+   <tr >
+     <td align="center" class="jiaxiang">围屋之都</td>
+     <td align="center" class="jiaxiang"><video width="1004" height="565"
+      controls loop="loop" autoplay="autoplay" >
+       <source src="http://mpvideo.qpic.cn/0bf24aaacaaam4ah4qcrirqvbygdahqaaaia.f10002.mp4?dis_k=8af6ce3db6b54b69d13bf9999dbbb614&dis_t=1664854960&vid=wxv_2065925335786848257&format_id=10002&support_redirect=0&mmversion=false"type="video/mp4" />
+     </video></td>
+     <td align="center" class="jiaxiang">山水龙城</td>
+   </tr>
+ </table>
+ <table width="1004" border="0" align="center">
+   <tr>
+     <td colspan="2" align="center" bgcolor="#00CCFF"><hr noshade="noshade"  
+     align="center"/></td>
+   </tr>
+   <tr>
+     <td width="279" align="center" bgcolor="#FFFFFF" class="jiaxiang"><a href="http://www.jxln.gov.cn/lnzf/c104707/202109/0139b62012924a33a811d5eff6725c46.shtml"><img src="logo.png" width="270" height="250" /></td>
+     <td width="715" align="center" bgcolor="#FFFFFF" class="jiaxiang"><span class="jianjie">&nbsp;&nbsp; <a href="http://bnr.jiangxi.gov.cn/picture/0/f4139e59e6ef4ad8b339d7c945900532.jpg">龙南</a>建县于南唐保大十一年（953年），因县治在龙头山<br />
+      （一说百丈龙潭，又一说百丈龙滩）之南，
+     取名龙南，<br />
+     寓&quot;龙兴岭南&quot;之意。龙南是世界围屋之都，境内分布着376座各具特色的围屋，
+        占赣南客家围屋的70%以上；已探明稀土、钨、煤、石灰石、大理石、膨润土和铁矿等矿产资源40多种，
+        其中离子型重稀土储量占世界已探明储量的70%；拥有国家级自然保护区和国家森林公园九连山，
+        全国重点文物保护单位关西新围、燕翼围和太平桥，国家级风景名胜区南武当山，
+     国家3A级景区栗园围和客家酒堡。（点击图片可查看详细介绍）</span></td>
+   </tr>
+ </table>
 </body>
 </html>
