--- a/liuyan/liuyan.html
+++ b/liuyan/liuyan.html
@@ -2,11 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>赖晓龙的组网技术实训-留言</title>
 <style type="text/css">
 body {
-	background-color: #66CCFF;
-}
+	background-image: linear-gradient(135deg, #d10dce 0%, #f19615 100%);
 }
 .标题1{
 	
@@ -69,6 +68,11 @@ background-position: -100% 0;
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../中国唱诗班/中国唱诗班.html">中国唱诗班</a></td>
   </tr>
 </table>
-
+ <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+   <tr>
+     <td align="center"><iframe width="90%" height="1000"  src="https://forms.office.com/r/yPfFjdBQFX?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen>
+     </iframe></td>
+   </tr>
+ </table>
 </body>
 </html>
