--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="referrer" content="no-referrer" /><!--页面头部添加-->
-<title>无标题文档</title>
+<title>赖晓龙的组网技术实训-首页</title>
 <style type="text/css">
 body {
 	background-image: url(page1.jpg);
