--- a/jiaocheng/jiaocheng.html
+++ b/jiaocheng/jiaocheng.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>赖晓龙的组网技术实训-使用教程</title>
 <style type="text/css">
 body {
 	background-image: linear-gradient(135deg, #79d8cc 0%, #7211d3 100%); 
