--- a/zhuihuqinlong/gutianle.html
+++ b/zhuihuqinlong/gutianle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>曦曦的小窝</title>
+    <title>赖晓龙的组网技术实训-追虎擒龙</title>
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     <style>
 body {
