--- a/中国唱诗班/中国唱诗班.html
+++ b/中国唱诗班/中国唱诗班.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>赖晓龙的组网技术实训-中国唱诗班</title>
 <style type="text/css">
 body {
 	background-color: #7C5347;
