update duomeiti html

--- a/duomeiti/duomeiti.html
+++ b/duomeiti/duomeiti.html
@@ -2,12 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>多媒体技术</title>
 <style type="text/css">
 body {
-	background-color: #66CCFF;
-}
-}
+	background-image: linear-gradient(90deg, #79d8cc 0%, #e49f0c 100%);}
 .标题1{
 	
 	}
@@ -41,6 +39,11 @@ background-position: -100% 0;
 }
 }
 
+.内容简介 table tr td h3 {
+	font-family: "微软夜黑";
+	font-size: 36px;
+	color: #FF0033;
+}
 </style>
 </head><body class="内容简介">
 
@@ -57,8 +60,8 @@ background-position: -100% 0;
      bgcolor="#B3B294" ><img src="http://p.ananas.chaoxing.com/star3/origin/c5cea4c693d22413206ef121b87308b1.png
 " width="211" height="120" /></th>
   </tr>
-  </table>
- <table width="1000" border="1" align="center">
+</table>
+<table width="1000" border="1" align="center">
   <tr class="标题1">
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../index.html">首页</a></td>
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../jiaxiang/jiaxiangshanshui.html">家乡</a></td>
@@ -69,6 +72,39 @@ background-position: -100% 0;
     <td align="center" bgcolor="#FFFFFF" class="标题1"><a href="../中国唱诗班/中国唱诗班.html">中国唱诗班</a></td>
   </tr>
 </table>
-
+<table width="1004" border="0" align="center">
+   <tr>
+     <td align="center">
+     <h3>为了反对帝国主义的侵略<br />
+我们一定要建立强大的海军 </h3></td>
+     <td align="center"><a href="http://www.mod.gov.cn/education/2021-04/25/content_4883904.htm"><img src="mao.jpg" width="198" height="100" border="0" /></a></td>
+   </tr>
+</table>
+<table width="1004" border="0" align="center">
+   <tr>
+     <td align="left"><img src="1.jpeg" width="334" height="469" /></td>
+     <td align="center"><img src="2.jpg" width="259" height="469" /></td>
+     <td align="right"><img src="3.jpg" width="334" height="468" /></td>
+  </tr>
+ </table>
+ <table width="1004" border="0" align="center">
+   <tr>
+     <td><img src="16.jpeg" width="334" height="221" /></td>
+     <td><img src="17.png" width="334" height="222" /></td>
+     <td><img src="18 .jpg" width="334" height="218" /></td>
+   </tr>
+   <tr>
+     <td colspan="3"><img src="mmexport1664176119962.jpg" width="1004" height="142" /></td>
+   </tr>
+   <tr>
+     <td colspan="3">&nbsp;</td>
+   </tr>
+   <tr>
+     <td colspan="3">&nbsp;</td>
+   </tr>
+   <tr>
+     <td colspan="3">&nbsp;</td>
+   </tr>
+ </table>
 </body>
 </html>
