--- a/jiaxiang/jiaxiangshanshui.html
+++ b/jiaxiang/jiaxiangshanshui.html
@@ -84,8 +84,8 @@ background-position: -100% 0;
    <tr >
      <td align="center" class="jiaxiang">围屋之都</td>
      <td align="center" class="jiaxiang"><video width="1004" height="565"
-      controls loop="loop" autoplay="autoplay" >
-       <source src="http://mpvideo.qpic.cn/0bf24aaacaaam4ah4qcrirqvbygdahqaaaia.f10002.mp4?dis_k=8af6ce3db6b54b69d13bf9999dbbb614&dis_t=1664854960&vid=wxv_2065925335786848257&format_id=10002&support_redirect=0&mmversion=false"type="video/mp4" />
+      controls >
+       <source src="http://s138.ananas.chaoxing.com/sv-w8/video/ee/86/90/72ae2d20c756e246be60238e088176a4/sd.mp4?at_=1664885120533&ak_=377f2293ab3aa8b7f3bc02d1653e4f27&ad_=6a10101bdfc777af70d7de77990c38e4" type="video/mp4" />
      </video></td>
      <td align="center" class="jiaxiang">山水龙城</td>
    </tr>
