--- a/duomeiti/haijuntupian.html
+++ b/duomeiti/haijuntupian.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>赖晓龙的组网技术实训-中国唱诗班</title>
+<title>赖晓龙的组网技术实训-海军图片</title>
 <body style="background-color:#FFF">
     <table width="1400" border="0">
       <tr>
